@@ -104,7 +104,7 @@ static command_definition_t cmds[] = {
 	{ { '1', F1, 'h' }, 0, CMD_SCREEN_HELP, "screen-help",
 	  N_("Help screen") },
 	{ { '2', F2, 0 }, 0, CMD_SCREEN_PLAY, "screen-playlist",
-	  N_("Playlist screen") },
+	  N_("Queue screen") },
 	{ { '3', F3, 0 }, 0, CMD_SCREEN_FILE, "screen-browse",
 	  N_("Browse screen") },
 
@@ -131,15 +131,15 @@ static command_definition_t cmds[] = {
 	{ { '-', LEFT, 0 }, 0, CMD_VOLUME_DOWN, "volume-down",
 	  N_("Decrease volume") },
 	{ { ' ', 0, 0 }, 0, CMD_SELECT, "select",
-	  N_("Select/deselect song in playlist") },
+	  N_("Select/deselect song in queue") },
 	{ { 't', 0, 0 }, 0, CMD_SELECT_ALL, "select_all",
 	  N_("Select all listed items") },
 	{ { DEL, 'd', 0 }, 0, CMD_DELETE, "delete",
-	  N_("Delete song from playlist") },
+	  N_("Delete song from queue") },
 	{ { 'Z', 0, 0 }, 0, CMD_SHUFFLE, "shuffle",
-	  N_("Shuffle playlist") },
+	  N_("Shuffle queue") },
 	{ { 'c', 0, 0 }, 0, CMD_CLEAR, "clear",
-	  N_("Clear playlist") },
+	  N_("Clear queue") },
 	{ { 'r', 0, 0 }, 0, CMD_REPEAT, "repeat",
 	  N_("Toggle repeat mode") },
 	{ { 'z', 0, 0 }, 0, CMD_RANDOM, "random",
@@ -153,9 +153,9 @@ static command_definition_t cmds[] = {
 	{ { C('U'), 0, 0 }, 0, CMD_DB_UPDATE, "db-update",
 	  N_("Start a music database update") },
 	{ { 'S', 0, 0 }, 0, CMD_SAVE_PLAYLIST, "save",
-	  N_("Save playlist") },
+	  N_("Save queue") },
 	{ { 'a', 0, 0 }, 0, CMD_ADD, "add",
-	  N_("Add url/file to playlist") },
+	  N_("Add url/file to queue") },
 
 	{ { '!', 0, 0 }, 0, CMD_GO_ROOT_DIRECTORY, "go-root-directory",
 	  N_("Go to root directory") },
