@@ -116,7 +116,7 @@ static const struct help_text_row help_text[] = {
 
 	{ 0, CMD_NONE, NULL },
 	{ 0, CMD_NONE, NULL },
-	{ 1, CMD_NONE, N_("Playlist screen") },
+	{ 1, CMD_NONE, N_("Queue screen") },
 	{ 2, CMD_NONE, NULL },
 	{ 0, CMD_PLAY, N_("Play") },
 	{ 0, CMD_DELETE, NULL },
@@ -135,7 +135,7 @@ static const struct help_text_row help_text[] = {
 	{ 2, CMD_NONE, NULL },
 	{ 0, CMD_PLAY, N_("Enter directory/Select and play song") },
 	{ 0, CMD_SELECT, NULL },
-	{ 0, CMD_ADD, N_("Append song to playlist") },
+	{ 0, CMD_ADD, N_("Append song to queue") },
 	{ 0, CMD_SAVE_PLAYLIST, NULL },
 	{ 0, CMD_DELETE, N_("Delete playlist") },
 	{ 0, CMD_GO_PARENT_DIRECTORY, NULL },
@@ -150,7 +150,7 @@ static const struct help_text_row help_text[] = {
 	{ 0, CMD_SCREEN_SEARCH, N_("Search") },
 	{ 0, CMD_PLAY, N_("Select and play") },
 	{ 0, CMD_SELECT, NULL },
-	{ 0, CMD_ADD, N_("Append song to playlist") },
+	{ 0, CMD_ADD, N_("Append song to queue") },
 	{ 0, CMD_SELECT_ALL,	 NULL },
 	{ 0, CMD_SEARCH_MODE, NULL },
 #endif
