@@ -1,4 +1,5 @@
 ncmpc 0.22 - not yet released
+* rename "playlist" to "queue"
 
 
 ncmpc 0.21 - (2013-04-11)
